# Wattio_v2

./: .env.example  .gitignore  POWER DENSITY.xlsx  README.md  example-frenetic-inductor.csv  example-frenetic-trafo.csv  magnetic_core_thermal-2.xlsx  magnetic_core_thermal.xlsx  pyproject.toml
src/wattio/: __init__.py  __main__.py  agent.py  cli.py  config.py  models.py
src/wattio/core_geometry/: __init__.py  inverse.py  shapes.py  vendor_overrides.py
src/wattio/data/: _build_core_db.py  core_geometry_db.xlsx
src/wattio/diary/: export.py  loader.py  writer.py
src/wattio/knowledge/: curated.py  policy.py
src/wattio/knowledge/curated/: core-customization-workflow.md  custom-core-geometry.md  ferroxcube-material-selection.md  frenetic-psfb-core-selection.md  magnetic-core-thermal-limits.md
src/wattio/llm/: anthropic.py  base.py  openai.py  router.py
src/wattio/prompts/: system.md
src/wattio/tools/: base.py  core_envelope.py  core_thermal_search.py  diary_note.py  file_reader.py  knowledge_search.py  list_files.py  ltspice_edit.py  ltspice_export_csv.py  ltspice_helpers.py  ltspice_plot.py  ltspice_run.py  ltspice_sweep.py  magnetic_suggest.py  power_density_search.py  registry.py  winding_optimizer.py
tests/: conftest.py  test_agent.py  test_config.py  test_core_geometry.py  test_diary.py  test_diary_loader.py  test_diary_note.py  test_knowledge.py  test_list_files.py  test_llm_anthropic.py  test_llm_openai.py  test_llm_router.py  test_ltspice_tools.py  test_magnetic_suggest.py  test_models.py  test_tools.py
