[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wattio"
version = "0.1.0"
description = "AI agent for power electronics engineers"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.24",
    "python-dotenv>=1.0",
    "python-docx>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "PyLTSpice>=5.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
wattio = "wattio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wattio"]

[tool.hatch.build.targets.wheel.force-include]
"src/wattio/knowledge/curated" = "wattio/knowledge/curated"
"src/wattio/prompts" = "wattio/prompts"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]